# KlavoraAI

./: .gitignore  README.md  pyproject.toml
data/demo/contract/: manifest.json  quality_report.json  test.jsonl  val.jsonl
data/synthetic/: contract_seed.jsonl  policy_seed.jsonl
docs/: contract_data_pipeline.md  contract_extraction_runbook.md  evaluation_runbook.md  policy_data_pipeline.md  policy_extraction_runbook.md  schema_contract.md  schema_policy.md  training_runbook.md  unsloth_colab_gemma3.md
evaluation/benchmarks/: contract_demo_benchmark.jsonl  policy_demo_benchmark.jsonl
notebooks/: Gemma3_(4B)-test.ipynb  Gemma3_(4B)-v0.ipynb  Qwen3_(4B)_Instruct-v1.ipynb
scripts/: build_contract_examples.py  build_eval_benchmark.py  build_policy_examples.py  build_seed_datasets.py  evaluate_extraction.py  ingest_contractnli.py  ingest_cuad.py  ingest_legal_summarization.py  ingest_opp115.py  train_unsloth.py
src/klavora_ai/: __init__.py  contract_data.py  dataset_builder.py  demo_profiles.py  io_utils.py  policy_data.py  prompts.py  schemas.py  training_config.py
training/configs/: contract_gemma3_4b_qlora.yaml  contract_gemma3_4b_qlora_main.yaml  contract_gemma3_4b_qlora_main_mixed.yaml  contract_gemma3_4b_qlora_sanity.yaml  contract_llama32_3b_demo.yaml  contract_qlora.yaml  contract_qwen3_4b_demo.yaml  contract_qwen3_4b_standard.yaml  policy_gemma3_4b_qlora.yaml  policy_gemma3_4b_qlora_main.yaml  policy_gemma3_4b_qlora_sanity.yaml  policy_llama32_3b_demo.yaml  policy_qlora.yaml  policy_qwen3_4b_demo.yaml  policy_qwen3_4b_standard.yaml
(+4 files in other folders)
