[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klavora-ai"
version = "0.1.0"
description = "Private document intelligence fine-tuning scaffold."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "pydantic>=2.7",
  "pyarrow>=15.0",
  "PyYAML>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
